--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "csv_utility"
 version = "0.1.0"
 authors = ["Matthias Lodner <matthias.lodner@uni-ulm.de>"]
 edition = "2018"
+license = "MIT"
+license-file = "LICENSE.txt"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
