--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ repository = "https://github.com/Matzenxt/csv_utility"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+csv = "1.1.3"
+seahorse = "1.0.0"
