--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ dialoguer = "0.7.1"
 
 # Loading bars
 indicatif = "0.15.0"
+
+#
+serde = { version = "1.0.117", features = ["derive"] }
+serde_json = "1.0"
