--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,12 @@ seahorse = "1.1.1"
 # CSV
 csv = "1.1.4"
 
-# Necessary for dialoguer and indicatif
+# Necessary for dialoguer
 console = "0.13.0"
 
-# Option picker / 'interface'
+# Option picker / user interface
 dialoguer = "0.7.1"
 
-# Loading bars
-indicatif = "0.15.0"
-
-#
+# To de- / serilise mappings
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0"
